# 2021-SAFMC

./: README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/cv_bridge/: build.cmake.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
logs/openmv/: build.make.003.log.stderr  build.make.004.log.stderr  build.make.006.log.stderr  build.make.015.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.045.log.stderr  build.make.046.log.stderr  build.make.047.log.stderr  build.make.049.log.stderr  build.make.050.log.stderr  build.make.051.log.stderr  build.make.052.log.stderr  build.make.054.log.stderr  build.make.055.log.stderr  build.make.056.log.stderr  build.make.057.log.stderr  build.make.058.log.stderr  build.make.059.log.stderr  build.make.061.log.stderr  build.make.062.log.stderr  build.make.063.log.stderr  build.make.064.log.stderr  build.make.065.log.stderr  build.make.067.log.stderr  (+34 more)
logs/openmv_cam/: build.check.000.log.stderr
logs/teraranger/: build.cmake.001.log.stderr
logs/zbar_ros/: build.make.000.log.stderr
logs/zed_qrcode_sub/: build.check.097.log.stderr  build.check.107.log.stderr  build.check.114.log.stderr  build.check.115.log.stderr  build.check.119.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.012.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.029.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.040.log.stderr  build.make.043.log.stderr  build.make.044.log.stderr  build.make.049.log.stderr  build.make.051.log.stderr  build.make.053.log.stderr  build.make.060.log.stderr  build.make.072.log.stderr  build.make.073.log.stderr  build.make.075.log.stderr  build.make.076.log.stderr  build.make.077.log.stderr  (+14 more)
logs/zed_sync_test/: build.make.000.log.stderr
logs/zed_window_sub/: build.make.005.log.stderr  build.make.006.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.021.log.stderr  build.make.026.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  build.make.040.log.stderr  build.make.041.log.stderr  build.make.046.log.stderr  build.make.049.log.stderr  build.make.058.log.stderr  build.make.062.log.stderr  build.make.064.log.stderr  build.make.068.log.stderr  build.make.069.log.stderr  build.make.080.log.stderr  build.make.081.log.stderr  build.make.082.log.stderr  build.make.083.log.stderr  build.make.084.log.stderr  (+3 more)
src/: .rosinstall  .rosinstall.bak
src/offbn/: CMakeLists.txt  package.xml
src/offbn/src/: outdoor_4m_20m.cpp  outdoor_4m_hover.cpp  outdoor_6m_20m.cpp  outdoor_6m_hover.cpp  outdoor_land.cpp  test_land.cpp  test_land_and_start.cpp  test_mission2.cpp  test_servo.cpp  test_simple.cpp  test_yaw.cpp
src/offbn/src/Temp/: do_yaw.cpp  offb_node.cpp  outdoor_4m_20m.cpp  outdoor_4m_hover.cpp  outdoor_6m_20m.cpp  outdoor_6m_hover.cpp  outdoor_land.cpp  test_depth.cpp  test_find_marker.cpp  test_find_marker_1.cpp  test_mission2_1side.cpp  test_simple.cpp  test_yaw.cpp  test_yaw_and_move.cpp
src/openmv/: CMakeLists.txt  package.xml
src/openmv/src/: openmv.cpp
src/openmv_test/: CMakeLists.txt  package.xml
src/openmv_test/launch/: openmv_test.launch
src/openmv_test/src/: capture.cpp  openmv_test.cpp
(+1215 files in other folders)
